# vector-objects

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  test.py  tracking-vectors.ipynb  visualize_mots.ipynb
.ipynb_checkpoints/: tracking-vectors-checkpoint.ipynb  visualize_mots-checkpoint.ipynb
.virtual_documents/: Untitled.ipynb  tracking-vectors.ipynb  visualize_mots.ipynb
