[tool.poetry]
name = "vector-objects"
version = "0.1.0"
description = ""
authors = ["Chanwut (Mick) Kittivorawong <chanwutk@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12.1"
transformers = "^4.36.2"
pillow = "^10.1.0"
# torch = "^2.1.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"
ipywidgets = "^8.1.1"
jupyterlab-lsp = "^5.0.1"
python-lsp-server = {extras = ["all"], version = "^1.9.0"}
jupyterlab-vim = "^4.1.0"
nbdime = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
